Fix overflow search menu on view-port

--- a/app/renderer/pages/search/components/SearchList/SearchList.scss
+++ b/app/renderer/pages/search/components/SearchList/SearchList.scss
@@ -1,5 +1,6 @@
 .SearchList {
   overflow: scroll;
+  height: 100%;
 }
 
 .SearchList__no-research-img {
